--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -9,7 +9,7 @@
 
 div.nav-bar {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-between;
     padding: 1rem 6rem;
     /* width: 100vw; */
@@ -350,22 +350,40 @@ div.footer h6 {
     padding-top: 6rem;
 }
 
-/* NOte. I added flex-wrap: wrap to some parent wrappers above */
+/* hamburger stuff */
+#menuToggle {
+    display: none;
+}
+
+
 
 /* media quaries */
+
 /* Mobile Styles*/
 @media only screen and (max-width:500px){ 
-    div.nav-bar {
+    /* div.nav-bar {
         justify-content: center;
-    }
+    } */
 
-    div.logo {
-        font-size:1.3rem;
-    }
+        /* div.logo {
+            font-size:1.3rem;
+        } */
 
-    ul li {
+    /* div.ul{
+        display: none;
+    } */
+
+    /* ul li {
         margin: 0 1.7vw;
         font-size:0.9rem;
+    } */
+
+    div.nav-bar{
+        padding: 1rem 2rem;
+    }
+
+    ul.nav-links{
+        display: none;
     }
 
     div.hero-section{
@@ -484,14 +502,111 @@ div.footer h6 {
     div.footer h6{
         font-size: 0.8rem;
     }
-    
+
+    /* hambuger menu */
+    #menuToggle {
+        display: unset;
+        z-index: 1;
+        position: relative;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+
+    #menuToggle a{
+        text-decoration: none;
+        color: #88949B;
+        -webkit-transition: color 0.3s ease;
+        -o-transition: color 0.3s ease;
+        transition: color 0.3s ease;
+    }
+
+    #menuToggle a:hover{
+        color: #cdd6db;
+    }
+
+    #menuToggle input{
+        display: block;
+        width:45px;
+        height:45px;
+        position:absolute; 
+        /* top: 0px; */
+        /* left: 79%; */
+        padding: 0;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 2;
+        -webkit-touch-callout: none; 
+    }
+
+    #menuToggle label {
+        position: relative;
+        display: block;
+        width: 45px;
+        height:45px;
+        
+    }
+
+    #menuToggle label span{
+        display: none;
+    }
+
+    #menuToggle label div{
+        display: block;
+        width: 45px;
+        height: 2px;
+        margin-bottom: 6px;
+        position: relative;
+        background: #cdd6db;
+        border-radius: 3px;
+        z-index: 1;
+        -webkit-transform-origin: 4px 0px;
+        -ms-transform-origin: 4px 0px;
+        transform-origin: 4px 0px;
+        /* means all - above - properties of this element should be transitioned 
+        adjust time to see */
+        -webkit-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+    }
+
+    #menuToggle input:checked + label div {
+        background: #88949B;
+    }
+
+    #menu {
+        position: absolute;
+        /* width: 300px; */
+        margin: -80px 0 0 -70px;
+        padding: 30px;
+        padding-top: 100px;
+        background: #f0f0f0;
+        /* hide the menu off-screen to the left */
+        top:-210px;
+        -webkit-transition: top 0.3s ease;
+        -o-transition: top 0.3s ease;
+        transition: top 0.3s ease;
+    }
+
+    #menu li{
+        text-align: center;
+        padding: 5px 0;
+        list-style: none;
+    }
+
+    /* slide menu */
+    #menuToggle input:checked ~ ul{
+        top:50px;
+    }
+   
 }
 
 /* Tablet Styles */
 @media only screen and (min-width:501px) and (max-width:1000px){
-    div.nav-bar {
+    /* div.nav-bar {
         justify-content: center;
-    }
+    } */
 
     div.hero-section{
         padding: 6rem;
