--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -279,6 +279,7 @@ div.footer-input {
     justify-content: center;
     align-items: center;
     padding-top: 3rem;
+    flex-wrap: wrap;
 }
 
 input[type="text"] {
@@ -482,20 +483,20 @@ div.footer h6 {
     }
 
     input[type="text"]{
-        width:35%;
+        width:100%;
+        margin-bottom: 2rem;
     }
 
     input[type="email"]{
-        width:35%;
+        width:100%;
     }
 
     textarea{
-        width:56%;
+        width:100%;
     }
 
     div.footer-btn a {
-        font-size: 0.7rem;
-        padding: 8px 48px;
+        padding: 15px 100px;
         border-radius: 3px;
         letter-spacing: 1px;
     }
