--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -9,7 +9,6 @@
 
 div.nav-bar {
     display: flex;
-    /* flex-wrap: wrap; */
     justify-content: space-between;
     padding: 1rem 6rem;
     /* width: 100vw; */
@@ -362,8 +361,6 @@ div.footer h6 {
 
 /* Mobile Styles*/
 @media only screen and (max-width:550px){ 
- 
-
     div.nav-bar{
         padding: 1rem 2rem;
     }
@@ -389,26 +386,6 @@ div.footer h6 {
     div.hero-content-btn a{
         font-size: 0.8rem;
         padding:8px 28px;
-    }
-
-    div.hero-background{
-        padding: 7rem;
-    }
-
-    div.background{
-        padding:10px 30px;
-        height: auto;
-    }
-
-    div.background h4{
-        font-size:0.8rem;
-        padding:0.7rem;
-    }
-
-    div.background p{
-        padding-left: 0.7rem;
-        letter-spacing:0px;
-        font-size: 0.6rem;
     }
 
     div.hero-background-pos{
@@ -518,8 +495,6 @@ div.footer h6 {
         width:45px;
         height:45px;
         position:absolute; 
-        /* top: 0px; */
-        /* left: 79%; */
         padding: 0;
         cursor: pointer;
         opacity: 0;
@@ -564,7 +539,6 @@ div.footer h6 {
 
     #menu {
         position: absolute;
-        /* width: 300px; */
         margin: -80px 0 0 -70px;
         padding: 30px;
         padding-top: 100px;
@@ -600,26 +574,17 @@ div.footer h6 {
         padding: 6rem;
     }
 
-    div.background{
-        padding:20px 30px;
-        height: auto;
-    }
-
-    div.background h4{
-        padding:1rem;
-    }
-
-    div.background p{
-        padding-left: 1rem;
-        letter-spacing: 1px;
-    }
-
     div.snapshot-team p{
         letter-spacing: 0px;
     }
 }
 
 @media only screen and (max-width:819px){
+    div.background{
+        height: auto;
+        padding-bottom: 20px;
+    }
+
     input[type="text"]{
         width:100%;
         margin-bottom: 1rem;
