--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -603,6 +603,10 @@ div.footer h6 {
         border-radius: 3px;
         letter-spacing: 1px;
     }
+
+    div.hero-background{
+        padding: 5rem;
+    }
 }
 
 
