--- a/google-home/style.css
+++ b/google-home/style.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 html,body {
     margin: 0em;
     height: 100%;
@@ -88,9 +81,15 @@ html,body {
 }
 
 .sect-head li:nth-child(4) a{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -102,8 +101,12 @@ html,body {
 
 
 .sect-head li:nth-child(4) img{
-        justify-content: center;
-        align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     width: 40px;
     height: 40px;
     border-radius: 100%;
@@ -116,9 +119,15 @@ html,body {
 /* google image section */
 
 .sect-google{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     height: 250px;
 }
 
@@ -126,17 +135,29 @@ html,body {
 
 /* search box section */
 .sect-search{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: 100px;
 }
 
 .search-box{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 600px;
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     margin: 0 1.3rem;
     position: relative;
     
@@ -175,15 +196,20 @@ html,body {
 
 .search-box input:focus {
     outline: none;
-    box-shadow: 0px 0px 9px -4px black; /*right ,bottom, blur, spread radius*/
+    -webkit-box-shadow: 0px 0px 9px -4px black;
+            box-shadow: 0px 0px 9px -4px black; /*right ,bottom, blur, spread radius*/
     border: gray;
 }
 /* end of search box section */
 
 /* two buttons */
 .buttons{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .buttons button{
@@ -205,7 +231,8 @@ html,body {
 }
 
 .buttons button:hover{
-    box-shadow: 2px 2px 5px -3px black;
+    -webkit-box-shadow: 2px 2px 5px -3px black;
+            box-shadow: 2px 2px 5px -3px black;
 }
 
 /* two buttons ends */
@@ -213,10 +240,19 @@ html,body {
 /* language links */
 .links{
     margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     height: 280px;
 }
 
@@ -242,9 +278,15 @@ html,body {
 
 /* first footer */
 .foot-one {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-bottom: 1px solid #dadce0;
     background-color: #f2f2f2;
     padding-left: 2em;
@@ -262,19 +304,33 @@ html,body {
 /* second footer */
 .foot-two {
     background-color: #f2f2f2;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex:1;
-    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex:1;
+        -ms-flex:1;
+            flex:1;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding-left: 2em;
 }
 
 .foot-two ul{
     padding: 0;
     margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .foot-two ul li{
@@ -294,8 +350,12 @@ html,body {
 }
 
 .foot-two ul:nth-child(1){
-    justify-content: flex-start;
-    flex: 1;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
 }
 
 .foot-two ul:nth-child(1) li{
@@ -303,8 +363,12 @@ html,body {
 }
 
 .foot-two ul:nth-child(2){
-    justify-content: center;
-    flex: 2;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
 }
 
 .foot-two ul:nth-child(2) img{
@@ -312,8 +376,12 @@ html,body {
 }
 
 .foot-two ul:nth-child(3){
-    justify-content: flex-end;
-    flex: 1;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
 }
 
 .foot-two ul:nth-child(3) li{
@@ -341,19 +409,27 @@ html,body {
 /* footer items */
 @media only screen and (max-width:816px){
     .foot-two {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 
     .foot-two ul:nth-child(1){
-        justify-content: center
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center
     }
 
     .foot-two ul:nth-child(2){
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 
     .foot-two ul:nth-child(3){
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 }
-
