--- a/google-home/style.css
+++ b/google-home/style.css
@@ -419,7 +419,10 @@ html,body {
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
-                flex-direction:column;
+                -webkit-box-orient:vertical;
+                -webkit-box-direction:normal;
+                    -ms-flex-direction:column;
+                        flex-direction:column;
     }
 
     .foot-two ul:nth-child(2){
@@ -432,7 +435,10 @@ html,body {
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
-                flex-direction:column;
+                -webkit-box-orient:vertical;
+                -webkit-box-direction:normal;
+                    -ms-flex-direction:column;
+                        flex-direction:column;
     }
 
     .foot-two ul li{
