--- a/google-home/style.css
+++ b/google-home/style.css
@@ -254,9 +254,9 @@ html,body {
         -ms-flex-align: start;
             align-items: flex-start;
     height: 280px;
-    -webkit-box-flex: 9;
+    /* -webkit-box-flex: 9;
     -ms-flex: 9;
-        flex: 9;
+        flex: 9; */
 }
 
 .links li{
