--- a/resume/style.css
+++ b/resume/style.css
@@ -4,6 +4,10 @@ body {
 }
 
 body {
+    background: #ffffff;
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(50%, #ff6b81), color-stop(0, transparent));
+    background-image: -o-linear-gradient(left, #ff6b81 50%, transparent 0);
+    background-image: linear-gradient(90deg, #ff6b81 50%, transparent 0);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,8 +43,8 @@ b {
   margin-bottom: 2em;
   padding: 1rem 0 0 1rem;
   position: relative;
-  -webkit-box-shadow: -15px 15px 18px -18px black;
-          box-shadow: -15px 15px 18px -18px black;
+  -webkit-box-shadow: -20px 20px 25px -25px black;
+          box-shadow: -20px 20px 25px -25px black;
   background:
   -o-linear-gradient(right top, #ffffff 50%, #4b4b4b 0) no-repeat 100% 0 / 4em 4em,
   -o-linear-gradient(225deg, #b2b3b2 4em, #ffffff 0 );
@@ -81,7 +85,6 @@ b {
       -ms-flex-direction: row;
           flex-direction: row;
   margin-top: 0.4em;
-
 }
 
 .header ul li {
